--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,18 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'com.google.android.gms:play-services-auth:11.6.0'
+    compile 'com.google.android.gms:play-services-auth:11.8.0'
     compile 'com.lorentzos.swipecards:library:1.0.9'
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    compile 'com.google.android.gms:play-services-places:11.8.0'
+}
+
+repositories {
+    jcenter()
+    maven {
+        url "https://maven.google.com"
+    }
 }
 
 apply plugin: 'com.google.gms.google-services'
