--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,10 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     compile 'com.google.android.gms:play-services-places:11.8.0'
     compile 'io.github.ranga543:yelp-fusion-client:0.1.2'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
+    compile "io.reactivex.rxjava2:rxandroid:2.0.1"
 }
 
 repositories {
