--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,15 +31,17 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.google.android.gms:play-services-auth:11.8.0'
+    compile 'com.google.android.gms:play-services-location:11.8.0'
+    compile 'com.google.android.gms:play-services-places:11.8.0'
     compile 'com.lorentzos.swipecards:library:1.0.9'
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    compile 'com.google.android.gms:play-services-places:11.8.0'
     compile 'io.github.ranga543:yelp-fusion-client:0.1.2'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
     compile "io.reactivex.rxjava2:rxandroid:2.0.1"
+    compile 'pl.charmas.android:android-reactive-location2:2.1@aar'
 }
 
 repositories {
