--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,10 @@ dependencies {
     compile "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
     compile "io.reactivex.rxjava2:rxandroid:2.0.1"
     compile 'pl.charmas.android:android-reactive-location2:2.1@aar'
+    compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.github.bumptech.glide:glide:4.2.0'
+    kapt 'com.github.bumptech.glide:compiler:4.2.0'
 }
 
 repositories {
